.provarCaches/00D410000011HE0EAM/objects/rstk__icshrthdr__c.object
<CustomObject>
    <description>icshrthdr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_genopt__c &amp; &apos;_&apos; &amp;  rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_usrno__r.Name &amp; &apos;_&apos; &amp;
rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; 
rstk__icshrthdr_icshrtlist__r.rstk__icshrtlist_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp;
IF (ISBLANK(rstk__icshrthdr_proj__c), &apos;NULLPROJ&apos;,  rstk__icshrthdr_proj__r.rstk__pjproj_proj__c) &amp; &apos;_&apos; &amp;
rstk__icshrthdr_item__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp;
TEXT(NOW())</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icshrthdr_icshrtlist__r.Name</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_icshrtlist__c</fullName>
        <inlineHelpText>This is the Shortage List associated with this Shortage.</inlineHelpText>
        <label>icshrtlist</label>
        <referenceTo>rstk__icshrtlist__c</referenceTo>
        <relationshipLabel>icshrthdr</relationshipLabel>
        <relationshipName>icshrthdrs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Item which has a Shortage</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>icshrthdr</relationshipLabel>
        <relationshipName>icitemicshrthdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_itemdesc__c</fullName>
        <inlineHelpText>This is  the description of this Item which is short</inlineHelpText>
        <label>Item Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the associated Project for this Shortage</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>icshrthdr</relationshipLabel>
        <relationshipName>pjprojicshrthdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_qtyoh__c</fullName>
        <inlineHelpText>This is the Quantity On Hand of this Item which is short</inlineHelpText>
        <label>Quantity On Hand</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_qtyoutstdg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Outstanding</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_qtyrmngsupcover__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Remaining Sup Cover</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_qtyshort__c</fullName>
        <inlineHelpText>This is the Quantity Short of this Item</inlineHelpText>
        <label>Quantity Short</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_qtysupcover__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Supply Cover</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_resp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Responsible User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>icshrthdr</relationshipLabel>
        <relationshipName>syusricshrthdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrthdr_wbs__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the WBS associated with this Item which is short</inlineHelpText>
        <label>WBS</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>icshrthdr</relationshipLabel>
        <relationshipName>projwbsicshrthdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>icshrthdr</label>
    <listViews>
        <fullName>rstk__Shortage_Header</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__icshrthdr_proj__c</columns>
        <columns>rstk__icshrthdr_item__c</columns>
        <columns>rstk__icshrthdr_qtyoutstdg__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Shortage Header</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>icshrthdr</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>